# openbd-dump

./: .gitignore  README.rst  dump.py  pyproject.toml
